--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.20.8",
     "framer-motion": "^12.33.0",
     "next": "16.1.6",
     "react": "19.2.3",
@@ -28,4 +29,3 @@
     "typescript": "^5"
   }
 }
-
